fix checkbox align to left

--- a/static/css/styleform.css
+++ b/static/css/styleform.css
@@ -375,6 +375,14 @@ h6{
   margin-left: auto;
   margin-right: auto;
 }
+.table-form tr:nth-child(5) td{
+  text-align: left;
+  padding-left: 15px;
+}
+.table-form tr:last-child td{
+  text-align: left;
+  padding-left: 15px;
+}
 .table-form tr th{
   padding: 15px;
 }
